--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,8 +135,7 @@ services:
       - 'traefik.http.routers.myproject.tls.certresolver=myresolver'
       - 'traefik.http.routers.myproject.service=myproject'
       - 'traefik.http.services.myproject.loadbalancer.server.port=80'
-      - 'DevMail=${e_mail}'
-
+      # - 'DevMail=${e_mail}'
     volumes:
       - ./r-frnt/build:/usr/share/nginx/html
       # - ./html:/usr/share/nginx/html
@@ -186,7 +185,7 @@ services:
       - 'traefik.http.routers.whoami.entrypoints=websecure'
       - 'traefik.http.routers.whoami.tls.certresolver=myresolver'
       - 'traefik.http.routers.whoami.service=whoami'
-      - 'traefik.http.services.whoami.loadbalancer.server.port=8001'
+      - 'traefik.http.services.whoami.loadbalancer.server.port=80'
 
   # Add the catapp service
   catapp:
