--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,18 +80,18 @@ services:
 
   # React-Nginx
   react:
-    image: react:prod
+    image: turtlewolfe/geolarp:prod
     # image: react:dev
     build:
-      # target: prod
+      target: prod
       context: r-frnt
       dockerfile: ./Dockerfile
     # environment:
     #   CI: 'true'
-    ports:
-      # - 3000:3000
-      # - 80:80
-      - 3000:80
+    # ports:
+    # - 3000:3000
+    # - 80:80
+    # - 3000:80
     # depends_on:
     #   mongo:
     #     condition: service_healthy
@@ -103,8 +103,8 @@ services:
       # - ./nginx:/etc/nginx/conf.d
       # - ./r-frnt/build:/usr/share/nginx/html
       # - ./html:/usr/share/nginx/html
-    healthcheck:
-      test: ['CMD', 'CI=true npm run test']
+    # healthcheck:
+    #   test: ['CMD', 'CI=true npm run test']
     # depends_on:
     #   mernlama:
     #     condition: service_healthy
@@ -116,7 +116,7 @@ services:
       - 'traefik.http.routers.react.entrypoints=websecure'
       - 'traefik.http.routers.react.tls.certresolver=myresolver'
       - 'traefik.http.routers.react.service=react'
-      - 'traefik.http.services.react.loadbalancer.server.port=3000'
+      - 'traefik.http.services.react.loadbalancer.server.port=80'
 
   application:
     image: nginx
@@ -125,6 +125,8 @@ services:
     # Here we define our settings for traefik how to proxy our service.
     labels:
       # This is enableing treafik to proxy this service
+      # We set a label to tell Traefik to assign a hostname to the new service
+      - 'traefik.enable=true'
       # Here we have to define the URL
       - 'traefik.http.routers.myproject.rule=Host(`myproject.geolarp.com`)'
       # Here we are defining wich entrypoint should be used by clients to access this service
