--- a/r-frnt/.dockerignore
+++ b/r-frnt/.dockerignore
@@ -14,12 +14,12 @@
 **/charts
 **/docker-compose*
 **/compose*
-**/Dockerfile*
+# **/Dockerfile*
 **/node_modules
 **/npm-debug.log
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
 # README.md
-build
+# build
 .dockerignore
